fixed issue of there being a horizontal overflow on desktop - need to fix mobile sizing

--- a/assets/styles.css
+++ b/assets/styles.css
@@ -9,7 +9,8 @@ body {
 }
 
 .container-fluid {
-    padding: 20px 0 20px 0;
+    padding-top: 20px;
+    padding-bottom: 20px;
 }
 
 #intro-wrapper {
